--- a/Koha/Plugin/Com/ByWaterSolutions/EdifactEnhanced/configure.tt
+++ b/Koha/Plugin/Com/ByWaterSolutions/EdifactEnhanced/configure.tt
@@ -155,6 +155,11 @@ function check_if_buyer_san_use_library_ean_split_first_part() {
                        <label for="lin_use_item_field_qualifier">Qualifier: </label>
                        <input type="text" name="lin_use_item_field_qualifier" id="lin_use_item_field_qualifier" value="[% lin_use_item_field_qualifier %]">
                     </li>
+                    <li>
+                        <label for="lin_use_item_field_clear_on_invoice">Clear field during invoicing: </label>
+                        <input type="checkbox" name="lin_use_item_field_clear_on_invoice" id="lin_use_item_field_clear_on_invoice" value="1" [% IF lin_use_item_field_clear_on_invoice %]checked="checked"[% END %]>
+                        <span class="hint">If this box is checked, the item field defined above will be cleared out when an EDI invoice for that item is imported.</span>
+                    </li>
                   </ol>
               </fieldset>
 
