--- a/Koha/Plugin/Com/ByWaterSolutions/EdifactEnhanced/configure.tt
+++ b/Koha/Plugin/Com/ByWaterSolutions/EdifactEnhanced/configure.tt
@@ -324,6 +324,14 @@ LLO:
                    </select>
                    <span class="hint">Split the GIR into multiple lines where each line has this many subfields. Set to 0 for no GIR splitting.</span>
                 </li>
+                <li>
+                   <label for="set_bookseller_from_order_basket">Set the invoice vendor from the first invoiced item's basket: </label>
+                   <input type="checkbox" name="set_bookseller_from_order_basket" id="set_bookseller_from_order_basket" value="1" [% IF set_bookseller_from_order_basket %]checked="checked"[% END %]>
+                   <span class="hint">
+                       If have multiple vendor edi accounts for the same vendor, this setting will make the invoices show up under the correct vendor account,
+                       if this option is not enabled, all the invoices will show up under the first edi vendor account to download the invoices from the vendor's server.
+                   </span>
+                </li>
               </ol>
             </fieldset>
 
